// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`elements/content-sidebar/versions/VersionsSidebarContainer handleFetchError should create StaticVersionSidebar if onUpgradeClick is present 1`] = `
<StaticVersionsSidebar
  error={
    {
      "defaultMessage": "File versions could not be retrieved.",
      "id": "be.sidebarVersions.fetchError",
    }
  }
  isArchived={false}
  isLoading={false}
  isWatermarked={false}
  onUpgradeClick={[Function]}
  parentName="details"
  versionCount={0}
  versionLimit={Infinity}
  versions={[]}
/>
`;

exports[`elements/content-sidebar/versions/VersionsSidebarContainer handleFetchError should set state to default values with error message 1`] = `
<VersionsSidebar
  error={
    {
      "defaultMessage": "File versions could not be retrieved.",
      "id": "be.sidebarVersions.fetchError",
    }
  }
  fileId="12345"
  isArchived={false}
  isLoading={false}
  isWatermarked={false}
  onDelete={[Function]}
  onDownload={[Function]}
  onPreview={[Function]}
  onPromote={[Function]}
  onRestore={[Function]}
  parentName="details"
  versionCount={0}
  versionLimit={Infinity}
  versions={[]}
/>
`;

exports[`elements/content-sidebar/versions/VersionsSidebarContainer render should match its snapshot 1`] = `
<VersionsSidebar
  fileId="12345"
  isArchived={false}
  isLoading={true}
  isWatermarked={false}
  onDelete={[Function]}
  onDownload={[Function]}
  onPreview={[Function]}
  onPromote={[Function]}
  onRestore={[Function]}
  parentName="activity"
  versionCount={Infinity}
  versionLimit={Infinity}
  versions={[]}
/>
`;
